--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.properties.hibernate.show_sql=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=myspringsenderacc@gmail.com
-spring.mail.password=dvcfxqjpknylfrun
+spring.mail.username=smailsender35@gmail.com
+spring.mail.password=ziemxguhvdpibomf
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
